# yellowanddangerous

./: .gitignore  align.py  check_exits.py  check_paths.py  colors.py  crop.py  makedist.py  scons_scramble.py  shiftlevel.py
blender/: YellowAndDangerous.blend
data/levels/: level00.txt  level01.txt  level02.txt  level03.txt  level04.txt  level05.txt  level06.txt  level07.txt  level08.txt  level09.txt  level10.txt  level11.txt  level12.txt  level13.txt  level14.txt  level15.txt  level16.txt  level17.txt  level18.txt  level19.txt  level20.txt  level21.txt  level22.txt  level23.txt  level24.txt  level25.txt  level26.txt  level27.txt  level28.txt  level29.txt  level30.txt  level31.txt  level32.txt  level33.txt  level34.txt  level35.txt  level36.txt  level37.txt  level38.txt  level39.txt  (+11 more)
data/yellowanddangerous/: offsets.ini
gradle/: build.gradle  local.properties
gradle/app/: CMakeLists.txt  build.gradle  version.gradle
gradle/app/src/ads/: AndroidManifest.xml  google-services.json
gradle/app/src/ads/java/com/yellowdanger/: YellowAndDangerous.java
gradle/app/src/main/: AndroidManifest.xml
gradle/app/src/main/cpp/c/: all.c  all.h  allefant.c  allefant.h  barrel.c  barrel.h  block.c  block.h  block_type.c  block_type.h  cart.c  cart.h  common.c  common.h  config.c  config.h  conveyor.c  conveyor.h  cube.c  cube.h  debug.c  debug.h  editor.c  editor.h  event.c  event.h  eye.c  eye.h  game.c  game.h  gremlin.c  gremlin.h  input.c  input.h  intro.c  intro.h  isometric.c  isometric.h  main.c  main.h  (+24 more)
gradle/app/src/main/cpp/land/: land.c  land.h
gradle/app/src/main/java/com/yellowdanger/: BaseActivity.java  YellowAndDangerous.java
gradle/app/src/main/res/values/: strings.xml
gradle/app/src/paid/: google-services.json
gradle/app/src/paid/java/com/yellowdanger/: YellowAndDangerous.java
gradle/gradle/wrapper/: gradle-wrapper.properties
src/: all.py  allefant.py  barrel.py  block.py  block_type.py  cart.py  common.py  config.py  conveyor.py  cube.py  debug.py  editor.py  event.py  eye.py  game.py  gremlin.py  input.py  intro.py  isometric.py  level.py  main.py  map.py  menu.py  overview.py  platform.py  player.py  record.py  render.py  save.py  test.py  testtube.py  title.py  vent.py
